# gsr2

./: .envrc  .gitignore  Cargo.toml  Makefile  README.md  TODO.md  clippy.txt  flake.nix  gui.dot  nohup.out  rust-toolchain.toml  script.gsr2.toml  tags
git-gamble-hooks/: post-gamble  pre-gamble
gui/: mod.rs
script/: basedir_line.toml  gsr-template.toml  gsr.toml  gsr2.toml  show_sql  variables.toml  vars
sql/: alter_table.sql  alter_table_picture_category.sql  create_db.sql  create_index_category.sql  dummy_arg.sql  import_db.sql  insert_test_data.sql  update_test_data.sql
src/: application_state.old.rs  application_state.rs  cli.rs  command.rs  command_line_interface.rs  control.rs  database.rs  default_values.rs  dimension.rs  direction.rs  display.rs  editor.rs  env.rs  environment.rs  file.rs  file_system.rs  gallery.rs  gen_data.rs  gen_image.rs  graphic_user_interface.rs  gui.rs  image_data.rs  lib.rs  main.rs  model.rs  navigator.rs  order.rs  paths.rs  picture.rs  scratch.rs  test_data.rs
src/cli/: args.rs  command.rs  ctlg_args.rs  status.rs
src/ctlg/: main.rs
src/env/: configuration.rs  default_values.rs  dimension.rs  environment.rs
src/file/: database.rs  operation.rs  paths.rs  picture_file.rs
src/gui/: application.rs  components.rs  control.rs  controller.rs  direction.rs  display.rs  editor.rs  entry_kind.rs  event.rs  mod.rs  mode.rs  navigator.rs  selector.rs  setting.rs  state.rs  view.rs
src/model/: action.rs  catalog.rs  categories.rs  category.rs  color.rs  color_range.rs  cover.rs  find.rs  finder.rs  gallery.rs  gen_image.rs  image_data.rs  label.rs  order.rs  palette.rs  (+8 more)
testdata/: gsr2.db  gsr2_new.db  nine_colorsIMAGE_DATA.json  single_dotIMAGE_DATA.json
(+16 files in other folders)
