[package]
name = "gsr2"
version = "0.1.0"
edition = "2024"
authors = ["ToF-"]
default-run = "gsr2"

[[bin]]
name = "gen_data"
path = "src/gen_data.rs"

[[bin]]
name = "gsr2"
path = "src/main.rs"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.4", features = ["derive"] }
gtk = { version = "0.10.1", package = "gtk4", features = ["v4_20"] }

image = "0.25.8"
mime = "0.3.17"
palette_extract = "0.1.0"
rand = "0.9.2"
rusqlite = "0.37.0"
thumbnailer = "0.5.1"
time-elapsed = "0.1.0"
time-format = "1.2.1"
walkdir = "2.5.0"
